[package]
name = "minotari_app_grpc"
authors = ["The Tari Development Community"]
description = "This crate is to provide a single source for all cross application grpc files and conversions to and from tari::core"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "1.0.0-pre.11a"
edition = "2018"

[dependencies]
tari_common_types = {  path = "../../base_layer/common_types" }
tari_comms = { path = "../../comms/core" }
tari_core = { path = "../../base_layer/core" }
tari_crypto = { version = "0.20" }
tari_script = { path = "../../infrastructure/tari_script" }
tari_utilities = { version = "0.7" }

argon2 = { version = "0.4.1", features = ["std", "password-hash"] }
base64 = "0.13.0"
borsh = "1.2"
chrono = { version = "0.4.19", default-features = false }
log = "0.4"
prost = "0.11.9"
prost-types = "0.11.9"
rand = "0.8"
rcgen = "0.11.3"
subtle = "2.5.0"
thiserror = "1"
tokio = { version = "1.36", features = ["fs"] }
tonic = { version = "0.8.3", features = ["tls"]}
zeroize = "1"

[build-dependencies]
tari_features = { path = "../../common/tari_features", version = "1.0.0-pre.11a" }
tonic-build = "0.8.4"

[package.metadata.cargo-machete]
ignored = ["prost"] # this is so we can run cargo machete without getting false positive about macro dependancies
