[package]
name = "minotari_app_utilities"
version = "1.0.0-pre.11a"
authors = ["The Tari Development Community"]
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
tari_common = { path = "../../common" }
tari_common_types = { path = "../../base_layer/common_types" }
tari_comms = { path = "../../comms/core" }
tari_utilities = { version = "0.7" }
minotari_app_grpc = { path = "../minotari_app_grpc", optional = true }

clap = { version = "3.2", features = ["derive", "env"] }
futures = { version = "^0.3.16", default-features = false, features = ["alloc"] }
json5 = "0.4"
log = { version = "0.4.8", features = ["std"] }
rand = "0.8"
tokio = { version = "1.36", features = ["signal"] }
serde = "1.0.126"
thiserror = "^1.0.26"
dialoguer = { version = "0.10" }
tonic = "0.8.3"


[build-dependencies]
tari_common = { path = "../../common", features = ["build", "static-application-info"] }
tari_features = { path = "../../common/tari_features", version = "1.0.0-pre.11a" }

[features]
miner_input = ["minotari_app_grpc"]
