[package]
name = "minotari_console_wallet"
version = "1.0.0-pre.11a"
authors = ["The Tari Development Community"]
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
minotari_app_grpc = { path = "../minotari_app_grpc" }
minotari_app_utilities = { path = "../minotari_app_utilities" }
tari_common = { path = "../../common" }
tari_common_types = { path = "../../base_layer/common_types" }
tari_comms = { path = "../../comms/core" }
tari_comms_dht = { path = "../../comms/dht" }
tari_contacts = { path = "../../base_layer/contacts" }
tari_crypto = { version = "0.20" }
tari_key_manager = { path = "../../base_layer/key_manager" }
tari_libtor = { path = "../../infrastructure/libtor", optional = true }
tari_p2p = { path = "../../base_layer/p2p", features = ["auto-update"] }
tari_script = { path = "../../infrastructure/tari_script" }
tari_shutdown = { path = "../../infrastructure/shutdown" }
tari_utilities = { version = "0.7" }
minotari_wallet = { path = "../../base_layer/wallet", features = [
  "bundled_sqlite",
] }
tari_hashing = { path = "../../hashing" }

# Uncomment for tokio tracing via tokio-console (needs "tracing" featurs)
console-subscriber = "0.1.8"
#tokio = { version = "1.36", features = ["signal", "tracing"] }
# Uncomment for normal use (non tokio-console tracing)
tokio = { version = "1.36", features = ["signal"] }

chrono = { version = "0.4.19", default-features = false }
clap = { version = "3.2", features = ["derive", "env"] }
config = "0.13.0"
crossterm = { version = "0.25.0" }
digest = "0.10"
futures = { version = "^0.3.16", default-features = false, features = [
  "alloc",
] }
log4rs = { version = "1.3.0", default_features = false, features = [
  "config_parsing",
  "threshold_filter",
  "yaml_format",
  "console_appender",
  "rolling_file_appender",
  "compound_policy",
  "size_trigger",
  "fixed_window_roller",
  "delete_roller",
] }
log = { version = "0.4.8", features = ["std"] }
qrcode = { version = "0.12" }
rand = "0.8"
regex = "1.5.4"
reqwest = "0.11.18"
rpassword = "5.0"
rustyline = "9.0"
serde = "1.0.136"
serde_json = "1.0.79"
sha2 = "0.10"
strum = "0.22"
strum_macros = "0.22"
thiserror = "1.0.26"
tonic = "0.8.3"
unicode-segmentation = "1.6.0"
unicode-width = "0.1"
zeroize = "1"
zxcvbn = "2"
url = "2.3.1"
blake2 = "0.10"

[dependencies.tari_core]
path = "../../base_layer/core"
default-features = false
features = ["transactions", "mempool_proto", "base_node_proto"]

[dependencies.tui]
version = "^0.16"
default-features = false
features = ["crossterm"]

[build-dependencies]
tari_features = { path = "../../common/tari_features", version = "1.0.0-pre.11a" }

[features]
default = ["libtor"]
libtor = ["tari_libtor"]
grpc = []

[package.metadata.cargo-machete]
# We need to specify extra features for log4rs even though it is not used directly in this crate
ignored = ["strum", "log4rs"]
