[package]
name = "minotari_console_wallet"
version.workspace = true
authors = ["The Tari Development Community"]
edition.workspace = true
license = "BSD-3-Clause"

[dependencies]
minotari_app_grpc = { workspace = true }
minotari_app_utilities = { workspace = true }
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_comms = { workspace = true }
tari_comms_dht = { workspace = true }
tari_core = { workspace = true, default-features = false, features = ["transactions", "mempool_proto", "base_node_proto"] }
tari_contacts = { workspace = true }
tari_crypto = { workspace = true }
tari_key_manager = { workspace = true }
tari_libtor = { workspace = true, optional = true }
tari_p2p = { workspace = true, features = ["auto-update"] }
tari_shutdown = { workspace = true }
tari_utilities = { workspace = true }
minotari_wallet = { workspace = true, features = [
    "bundled_sqlite",
] }
tari_hashing = { workspace = true }

# Uncomment for tokio tracing via tokio-console (needs "tracing" featurs)
console-subscriber = "0.1.8"
#tokio = { version = "1.36", features = ["signal", "tracing"] }
# Uncomment for normal use (non tokio-console tracing)
tokio = { version = "1.36", features = ["signal"] }

blake2 = "0.10"
chrono = { version = "0.4.19", default-features = false }
clap = { version = "3.2", features = ["derive", "env"] }
config = "0.14.0"
crossterm = { version = "0.25.0" }
digest = "0.10"
futures = { version = "^0.3.16", default-features = false, features = [
    "alloc",
] }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs", rev = "20e2a20", optional = true }
log = { version = "0.4.8", features = ["std"] }
log4rs = { version = "1.3.0", default_features = false, features = [
    "config_parsing",
    "threshold_filter",
    "yaml_format",
    "console_appender",
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
    "delete_roller",
] }
qrcode = { version = "0.12" }
rand = "0.8"
regex = "1.5.4"
reqwest = "0.11.18"
rpassword = "5.0"
rustyline = "9.0"
serde = "1.0.136"
serde_json = "1.0.79"
sha2 = "0.10"
strum = "0.22"
strum_macros = "0.22"
thiserror = "1.0.26"
tonic = "0.8.3"
unicode-segmentation = "1.6.0"
unicode-width = "0.1"
url = "2.3.1"
zeroize = "1"
zxcvbn = "2"


[dependencies.tui]
version = "^0.16"
default-features = false
features = ["crossterm"]

[build-dependencies]
tari_features = { workspace = true }

[features]
default = ["libtor"]
grpc = []
ledger = ["ledger-transport-hid"]
libtor = ["tari_libtor"]

[package.metadata.cargo-machete]
# We need to specify extra features for log4rs even though it is not used directly in this crate
ignored = ["strum", "log4rs"]
