[package]
name = "minotari_ledger_wallet"
version = "0.52.0-pre.0"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
edition = "2021"


[dependencies]
# lock to rev as soon as this is fixed: https://github.com/rust-lang/rust/issues/98666
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" }
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git", rev = "6a7c4a3eb41ee0b09c8fd4dcc5be4f3a1f5d7b45" }

tari_crypto = { version = "0.18", default-features = false }

embedded-alloc = "0.5.0"
critical-section = { version = "1.1.1" }
digest = { version = "0.10", default-features = false }
borsh = { version = "1.0", default-features = false }
blake2 = { version = "0.10", default-features = false  }

[profile.release]
opt-level = 's'
lto = "fat" # same as `true`
panic = "abort"

[package.metadata.nanos]
name = "MinoTari Wallet"
curve = ["secp256k1", "ed25519"]
flags = "0"
icon = "key_16x16.gif"
icon_small = "key_14x14.gif"
path = ["44'/1022'","m/5261654'","m/44'"]
api_level = "1"

[workspace]
