[package]
name = "minotari_miner"
authors = ["The Tari Development Community"]
description = "The tari miner implementation"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.52.0"
edition = "2018"

[dependencies]
tari_core = { path = "../../base_layer/core", default-features = false }
tari_common = { path = "../../common" }
tari_common_types = { path = "../../base_layer/common_types" }
tari_comms = { path = "../../comms/core" }
minotari_app_utilities = { path = "../minotari_app_utilities" }
minotari_app_grpc = { path = "../minotari_app_grpc" }
tari_crypto = { version = "0.19" }
tari_utilities = { version = "0.6" }

borsh = "0.10"
crossterm = { version = "0.25.0" }
clap = { version = "3.2", features = ["derive"] }
crossbeam = "0.8"
futures = "0.3"
log = { version = "0.4", features = ["std"] }
log4rs = { git = "https://github.com/tari-project/log4rs.git", default_features = false, features = ["config_parsing", "threshold_filter", "yaml_format", "console_appender", "rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
num_cpus = "1.13"
rand = "0.8"
serde = { version = "1.0", default_features = false, features = ["derive"] }
tonic = { version = "0.6.2", features = ["transport"] }
tokio = { version = "1.23", default_features = false, features = ["rt-multi-thread"] }
thiserror = "1.0"
serde_json = "1.0.57"
native-tls = "0.2"
bufstream = "0.1"
chrono = { version = "0.4.19", default-features = false }
hex = "0.4.2"
derivative = "2.2.0"
base64 = "0.13.0"

[dev-dependencies]
prost-types = "0.9"
chrono = { version = "0.4.19", default-features = false }
config = "0.13.0"

[package.metadata.cargo-machete]
ignored = [
    # We need to specify extra features for log4rs even though it is not used directly in this crate
    "log4rs"
]
