[package]
name = "randomx_miner"
authors = ["The Tari Development Community"]
description = "The Tari merge mining proxy for xmrig"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "1.3.0-pre.0"
edition = "2018"

[features]
default = []

[dependencies]
minotari_app_utilities = { path = "../minotari_app_utilities", features = ["miner_input"] }
tari_common = { path = "../../common" }
tari_comms = { path = "../../comms/core" }
tari_core = { path = "../../base_layer/core" }
tari_utilities = "0.7.0"

clap = { version = "3.2", features = ["derive", "env"] }
config = "0.14.0"
crossterm = { version = "0.25.0" }
hex = "0.4.3"
log = { version = "0.4", features = ["std"] }
monero = { version = "0.21.0" }
randomx-rs = { version = "1.3.0" }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.63"
tokio = { version = "1.36", default-features = false, features = ["rt-multi-thread"] }

[build-dependencies]
tari_features = { path = "../../common/tari_features", version = "1.3.0-pre.0" }