[package]
name = "tari_app_grpc"
authors = ["The Tari Development Community"]
description = "This crate is to provide a single source for all cross application grpc files and conversions to and from tari::core"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.28.1"
edition = "2018"

[dependencies]
tari_common_types = { version = "^0.28", path = "../../base_layer/common_types"}
tari_core = {  path = "../../base_layer/core"}
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", branch = "main" }
tari_comms = { path = "../../comms"}
tari_utilities = "0.3.0"

chrono = { version = "0.4.19", default-features = false }
prost = "0.9"
prost-types = "0.9"
tonic = "0.6.2"

[build-dependencies]
tonic-build = "0.6.2"

