[package]
name = "tari_app_grpc"
authors = ["The Tari Development Community"]
description = "This crate is to provide a single source for all cross application grpc files and conversions to and from tari::core"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.40.1"
edition = "2018"

[dependencies]
tari_common_types = { version = "^0.40", path = "../../base_layer/common_types" }
tari_comms = { path = "../../comms/core" }
tari_core = { path = "../../base_layer/core" }
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", tag = "v0.16.1" }
tari_script = { path = "../../infrastructure/tari_script" }
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git", tag="v0.4.7" }

argon2 = { version = "0.4.1", features = ["std", "password-hash"] }
base64 = "0.13.0"
chrono = { version = "0.4.19", default-features = false }
digest = "0.9"
log = "0.4"
num-traits = "0.2.15"
prost = "0.9"
prost-types = "0.9"
rand = "0.8.5"
thiserror = "1"
tonic = "0.6.2"
zeroize = "1.3"

[build-dependencies]
tonic-build = "0.6.2"

