[package]
name = "tari_app_utilities"
version = "0.45.1-stagenet.0"
authors = ["The Tari Development Community"]
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
tari_comms = { path = "../../comms/core" }
tari_common = { path = "../../common" }
tari_common_types = { path = "../../base_layer/common_types" }
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git", tag="v0.4.10" }

clap = { version = "3.2.0", features = ["derive", "env"] }
futures = { version = "^0.3.16", default-features = false, features = ["alloc"] }
json5 = "0.2.2"
log = { version = "0.4.8", features = ["std"] }
rand = "0.7.3"
tokio = { version = "1.23", features = ["signal"] }
serde = "1.0.126"
thiserror = "^1.0.26"

[build-dependencies]
tari_common = { path = "../../common", features = ["build", "static-application-info"] }
