[package]
name = "tari_app_utilities"
version = "0.51.0-pre.3"
authors = ["The Tari Development Community"]
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
tari_common = { path = "../../common" }
tari_common_types = { path = "../../base_layer/common_types" }
tari_comms = { path = "../../comms/core" }
tari_features = { version = "0.51.0-pre.3", path = "../../common/tari_features"}
tari_utilities = { version = "0.4.10"}

clap = { version = "3.2", features = ["derive", "env"] }
futures = { version = "^0.3.16", default-features = false, features = ["alloc"] }
json5 = "0.4"
log = { version = "0.4.8", features = ["std"] }
rand = "0.7.3"
tokio = { version = "1.23", features = ["signal"] }
serde = "1.0.126"
thiserror = "^1.0.26"

[build-dependencies]
tari_common = { path = "../../common", features = ["build", "static-application-info"] }
tari_features = { version = "0.51.0-pre.3", path = "../../common/tari_features"}
