[package]
name = "tari_base_node"
authors = ["The Tari Development Community"]
description = "The tari full base node implementation"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.27.2"
edition = "2018"

[dependencies]
tari_app_grpc = { path = "../tari_app_grpc" }
tari_app_utilities = { path = "../tari_app_utilities" }
tari_common = { path = "../../common" }
tari_comms = { path = "../../comms", features = ["rpc"] }
tari_common_types = { path = "../../base_layer/common_types" }
tari_comms_dht = { path = "../../comms/dht" }
tari_core = { path = "../../base_layer/core", default-features = false, features = ["transactions"] }
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", branch = "main" }
tari_libtor = { path = "../../infrastructure/libtor" }
tari_mmr = { path = "../../base_layer/mmr", features=["native_bitmap"] }
tari_p2p = { path = "../../base_layer/p2p", features = ["auto-update"] }
tari_service_framework = { path = "../../base_layer/service_framework" }
tari_shutdown = { path = "../../infrastructure/shutdown" }
tari_utilities = "0.3.0"

anyhow = "1.0.32"
bincode = "1.3.1"
chrono = { version = "0.4.19", default-features = false }
config = { version = "0.9.3" }
either = "1.6.1"
futures = { version = "^0.3.16", default-features = false, features = ["alloc"] }
log = { version = "0.4.8", features = ["std"] }
log-mdc = "0.1.0"
num_cpus = "1"
regex = "1"
rustyline = "9.0"
rustyline-derive = "0.5"
strum = "0.22"
strum_macros = "0.22"
thiserror = "^1.0.26"
tokio = { version = "1.11", features = ["signal"] }
tonic = "0.6.2"
tracing = "0.1.26"

# network tracing, rt-tokio for async batch export
opentelemetry = { version = "0.16", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio", "collector_client", "reqwest_collector_client"] }
tracing-opentelemetry = "0.15.0"
tracing-subscriber = "0.2.20"

# Metrics
tari_metrics = { path = "../../infrastructure/metrics", optional = true }
warp = { version = "0.3.1", optional = true, default-features = false }
reqwest = { version = "0.11.4", default-features = false, optional = true }

[features]
default = ["metrics"]
avx2 = ["tari_core/avx2", "tari_crypto/avx2", "tari_p2p/avx2", "tari_comms/avx2", "tari_comms_dht/avx2"]
metrics = ["warp", "reqwest", "tari_metrics",  "tari_comms/metrics"]
safe = []
libtor = ["tari_libtor/libtor"]


